Use datamuse api to retrieve similar words
